<?xml version="1.0"?>
<package format="2">
  <name>wave_gazebo_plugins</name>
  <version>0.1.3</version>
  <description>
    This package contains Gazebo plugins for simulating water waves.
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>Apache 2.0</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
